# PolyDrop

./: Cargo.toml  README.md
src/: main.rs
src/builder/: mod.rs
src/builder/arguments/: mod.rs
src/builder/defaults/: mod.rs
src/builder/payloads/: mod.rs
src/builder/validate_urls/: mod.rs
src/builder/validate_urls/constants/: mod.rs
src/builder/validate_urls/ext_to_os_payload_map/: mod.rs
src/builder/validate_urls/github/: mod.rs
src/builder/validate_urls/julia/: mod.rs
src/builder/validate_urls/python/: mod.rs
