[package]
name = "polydrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking"]}
kuchiki = "0.8"
url = "2.2"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
html5ever = "0.27.0"
chrono = "0.4"
serde_json = "1.0.120"
colored = {version = "=2.0.0"}
quick-xml = "0.23.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
regex = "1.10.5"
scraper = "0.19.1"
